api heandler working

--- a/index-landing.html
+++ b/index-landing.html
@@ -167,35 +167,32 @@
                     </div>
                         <div class="row row-cols-1 row-cols-md-3 g-4" id="cards-continer">
                             <div class="col">
-                              <div class="card h-100">
-                                <div class="overflow-hidden" style="height: 150px;">
-                                    <img src="assets/images/others/author-image-2.png" class="card-img-top" alt="..."
-                                        style="width:100%;">
-                                </div>
-                                <div class="card-body">
-                                    <div class="row justify-content-between d-flex">
-                                        <p class="col card-text" style="font-weight: bold;">תאריך: <span class="card-date"></span></p>
-                                        <p class="col card-text" style="font-weight: bold;">שעה: <span class="card-hour"></span></p>
+                                <div class="card h-100">
+                                    <div class="overflow-hidden" style="height: 150px;">
+                                        <img src="assets/images/others/author-image-2.png" class="card-img-top" alt="..." style="width:100%;">
                                     </div>
-                                    <h5 class="card-title">לורם איפסום הוא כינוי לטק</h5>
-                                    <p class="card-text card-discript">לורם איפסום הוא כינוי לטקסט חסר משמעות לחלוטין - הנקרא לפעמים
-                                        גם דמי טקסט או ג'יבריש - ומיועד להיותח </p>
-                                </div>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item">משך: <span class="card-len">60</span> דקות</li>
-                                    <li class="list-group-item">שפת העברה: <span class="card-lan"></span></li>
-                                    <li class="list-group-item">שם המדריך/ה: <span class="card-instractor"></span></li>
-                                </ul>
-                                <div class="row d-flex card-footer justify-content-between align-content-between">
-                                    <a href="#" class="col col-5 card-link btn  tm-button card-reg"
-                                        style="font-size: 14px;">להרשמה</a>
-                                    <a href="#" class="col col-6 card-link btn tm-button card-zoom"
-                                        style="font-size: 14px;">התחברות לזום</a>
-                                </div>
-                              </div>                          
-                            
-                              </div>
-                          </div>
+                                    <div class="card-body">
+                                        <div class="row justify-content-between d-flex">
+                                            <p class="col card-text" style="font-weight: bold;">תאריך: <span class="card-date"></span></p>
+                                            <p class="col card-text" style="font-weight: bold;">שעה: <span class="card-hour"></span></p>
+                                        </div>
+                                        <h5 class="card-title" >לורם איפסום הוא כינוי לטק</h5>
+                                        <p class="card-text card-discript">לורם איפסום הוא כינוי לטקסט חסר משמעות לחלוטין - הנקרא לפעמים
+                                            גם דמי טקסט או ג'יבריש - ומיועד להיותח </p>
+                                    </div>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">משך: <span class="card-len">60</span> דקות</li>
+                                        <li class="list-group-item">שפת העברה: <span class="card-lan"></span></li>
+                                        <li class="list-group-item">שם המדריך/ה: <span class="card-instractor"></span></li>
+                                    </ul>
+                                    <div class="row d-flex card-footer justify-content-between align-content-between">
+                                        <a href="#" class="col col-5 card-link btn  tm-button card-reg" style="font-size: 14px;">להרשמה</a>
+                                        <a href="#" class="col col-6 card-link btn tm-button card-zoom" style="font-size: 14px;">התחברות
+                                            לזום</a>
+                                    </div>
+                                </div>                        
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
