JS code complet

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                 <h1 class="wow fadeInUp tm-animated-text" data-in-effect="rollIn"
                                     data-out-effect="fadeOutDown" data-out-shuffle="true" data-wow-delay="0.5s">תרבות
                                     בחירום</h1>
-                                <p class="wow fadeInUp" data-wow-delay="0.7s">פה צריך כותרת משנית של עד 10 מילים בערך
+                                <p class="wow fadeInUp" data-wow-delay="0.7s">פרויקט סדנאות מקוונות חינמי למגוון גילאים להפגת בדידות והרגעת חרדה במצבי חירום
                                 </p>
                                 <a href="#section-portfolio-area" class="tm-button wow fadeInUp"
                                     data-wow-delay="0.9s">ללוח הפעילויות<b></b></a>
@@ -149,7 +149,10 @@
                         <div class="col-lg-8 col-md-10 col-12">
                             <div class="tm-section-title text-center">
                                 <h2>לוח הסדנאות</h2>
-                                <p>פה תהיה הנחיית שימוש קצרה </p>
+                                <p class="w-100">לפניכם מוצגות כל הסדנאות!</br>
+                                     רוצים לסנן לפי קריטריון ספציפי? מלאו אחד מהשדות הבאים ולחצו על כפור "סנן".
+                                     </br> 
+                                     רוצים לראות שוב את כל הסדנאות? לחצו על כפתור "איפוס".</p>
                             </div>
                         </div>
                     </div>
@@ -244,9 +247,10 @@
                         <div class="col-xl-8 col-lg-10 col-12">
                             <div class="tm-cta text-center">
                                 <h2>רוצים להעביר סדנה בעצמכם?</h2>
-                                <h5>טקסט הנחייה ליצירת קשר, בין אם תיאום מול טליה או קישר לשאלון</h5>
-                                <a href="#section-contact-area" class="tm-button hash-scroll-link">טקסט
-                                    לכפתור<b></b></a>
+                                <h5>כל מה שאתם צריכים זה לחשוב על רעיון לסדנה שאתם יכולים להעביר. מיוגה לרישום בעיפרון, מאפייה עד מפגש סריגה ותשבצים.</h5>
+                                <h5>אחרי שחשבתם על רעיון תוכלו ללחוץ על הכפתור ולרשום את הסדנה שלכם באתר.</h5>
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfM4oBsCix_3hh49s1gvUd1ZRds2aXpTC4DQngOrsRcbsVvZw/viewform" class="tm-button " target="_blank">
+                                    לרישום סדנה<b></b></a>
                             </div>
                         </div>
                     </div>
